--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
     "build": "npm run start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "deploy": "echo $TRAVIS_BRANCH"
   },
   "repository": {
     "type": "git",
