feat: improve server

--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "nodejs",
+  "name": "projectInfrastructureExample",
   "builds": [
     { "src": "src/server.js", "use": "@now/node" }
   ]
